--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,9 @@
               <a href="{{ site.baseurl }}/search">Search</a>
               <a href="{{ site.baseurl }}/about">About</a>
               <a href="{{ site.baseurl }}/archive">Archive</a> -->
-			  <!--<a href="{{ site.baseurl }}/diving">Diving</a>
-			  <a href="{{ site.baseurl }}/music">Music</a> -->
-			  <a href="{{ site.baseurl }}/travel">Travel</a>
+			  <a href="{{ site.baseurl }}/diving">Diving</a>
+			  <!--<a href="{{ site.baseurl }}/music">Music</a> -->
+			  <!--<a href="{{ site.baseurl }}/travel">Travel</a>-->
             </nav>
           </header>
         </div>
